test(problem6): 테스트들을 성공 케이스와 실패 케이스로 분리하여 그룹화