@@ -350,182 +350,191 @@ class ApplicationTest {
     @Nested
     @DisplayName("문제 6 테스트")
     class Problem6Test {
-        @Test
-        void case1() {
-            List<List<String>> forms = List.of(
-                    List.of("jm@email.com", "제이엠"),
-                    List.of("jason@email.com", "제이슨"),
-                    List.of("woniee@email.com", "워니"),
-                    List.of("mj@email.com", "엠제이"),
-                    List.of("nowm@email.com", "이제엠")
-            );
-            List<String> result = List.of("jason@email.com", "jm@email.com", "mj@email.com");
-            assertThat(Problem6.solution(forms)).isEqualTo(result);
-        }
-
-        @Test
-        @DisplayName("세 글자 이상 겹치는 경우에도 정상적으로 작동한다.")
-        void case2() {
-            List<List<String>> forms = List.of(
-                    List.of("jm@email.com", "롬뭄무야"),
-                    List.of("jason@email.com", "이뭄무야"), // 세 글자 겹침!
-                    List.of("woniee@email.com", "이박사"),
-                    List.of("mj@email.com", "삼성증권이사장"),
-                    List.of("nowm@email.com", "증성증권차장님"), // 세 글자 겹침!
-                    List.of("baak@email.com", "빡빡이아조씨")
-            );
-            List<String> result = List.of("jason@email.com", "jm@email.com", "mj@email.com", "nowm@email.com");
-            assertThat(Problem6.solution(forms)).isEqualTo(result);
-        }
-
-        @Test
-        @DisplayName("result 는 이메일에 해당하는 부분의 문자열을 오름차순으로 정렬하고 중복은 제거한다.")
-        void case3() {
-            List<List<String>> forms = List.of(
-                    List.of("A@email.com", "간장게장"),
-                    List.of("B@email.com", "간장게장"),
-                    List.of("D@email.com", "간장게장"),
-                    List.of("D@email.com", "간장게장"),
-                    List.of("D@email.com", "간장게장"),
-                    List.of("F@email.com", "간장게장")
-            );
-            List<String> result = List.of("A@email.com", "B@email.com", "D@email.com", "F@email.com");
-            assertThat(Problem6.solution(forms)).isEqualTo(result);
-        }
-
-        @Test
-        @DisplayName("검증할 크루가 한 명도 없는 경우 예외 발생")
-        void case4() {
-            List<List<String>> forms = List.of();
-            assertThatThrownBy(() -> Problem6.solution(forms))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage(String.format(
-                            UserValidator.INVALID_COUNT_RANGE_MESSAGE_FORMAT,
-                            UserValidator.MIN_RANGE,
-                            UserValidator.MAX_RANGE)
-                    );
-        }
-
-        @Test
-        @DisplayName("검증할 크루가 10,000명을 초과하는 경우 예외 발생")
-        void case5() {
-            List<List<String>> forms = new ArrayList<>();
-            for (int i = 0; i < 10_001; i++) {
-                forms.add(Arrays.asList("human@email.com", "휴먼"));
+        @Nested
+        @DisplayName("문제 6 성공 케이스 테스트")
+        class Problem6SuccessTest {
+            @Test
+            @DisplayName("두 글자 이상이 '연속적으로' 겹치는 경우에 중복된 이름을 가진 크루로 판단한다.")
+            void case1() {
+                List<List<String>> forms = List.of(
+                        List.of("jm@email.com", "제이엠"),
+                        List.of("jason@email.com", "제이슨"),
+                        List.of("woniee@email.com", "워니"),
+                        List.of("mj@email.com", "엠제이"),
+                        List.of("nowm@email.com", "이제엠")
+                );
+                List<String> result = List.of("jason@email.com", "jm@email.com", "mj@email.com");
+                assertThat(Problem6.solution(forms)).isEqualTo(result);
             }
 
-            assertThatThrownBy(() -> Problem6.solution(forms))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage(String.format(
-                            UserValidator.INVALID_COUNT_RANGE_MESSAGE_FORMAT,
-                            UserValidator.MIN_RANGE,
-                            UserValidator.MAX_RANGE)
-                    );
+            @Test
+            @DisplayName("세 글자 이상 겹치는 경우에도 정상적으로 작동한다.")
+            void case2() {
+                List<List<String>> forms = List.of(
+                        List.of("jm@email.com", "롬뭄무야"),
+                        List.of("jason@email.com", "이뭄무야"), // 세 글자 겹침!
+                        List.of("woniee@email.com", "이박사"),
+                        List.of("mj@email.com", "삼성증권이사장"),
+                        List.of("nowm@email.com", "증성증권차장님"), // 세 글자 겹침!
+                        List.of("baak@email.com", "빡빡이아조씨")
+                );
+                List<String> result = List.of("jason@email.com", "jm@email.com", "mj@email.com", "nowm@email.com");
+                assertThat(Problem6.solution(forms)).isEqualTo(result);
+            }
+
+            @Test
+            @DisplayName("result 는 이메일에 해당하는 부분의 문자열을 오름차순으로 정렬하고 중복은 제거한다.")
+            void case3() {
+                List<List<String>> forms = List.of(
+                        List.of("A@email.com", "간장게장"),
+                        List.of("B@email.com", "간장게장"),
+                        List.of("D@email.com", "간장게장"),
+                        List.of("D@email.com", "간장게장"),
+                        List.of("D@email.com", "간장게장"),
+                        List.of("F@email.com", "간장게장")
+                );
+                List<String> result = List.of("A@email.com", "B@email.com", "D@email.com", "F@email.com");
+                assertThat(Problem6.solution(forms)).isEqualTo(result);
+            }
         }
 
-        @DisplayName("이메일 형식에 부합하지 않는 경우 예외 발생")
-        @ParameterizedTest(name = "{displayName} {index} - {0}")
-        @MethodSource("onboarding.ApplicationTest#invalidEmailFormat")
-        void case6(String email, String name) {
-            List<List<String>> forms = List.of(
-                    List.of(email, name)
-            );
+        @Nested
+        @DisplayName("문제 6 실패 케이스 테스트")
+        class Problem6FailureTest {
+            @Test
+            @DisplayName("검증할 크루가 한 명도 없는 경우 예외 발생")
+            void case1() {
+                List<List<String>> forms = List.of();
+                assertThatThrownBy(() -> Problem6.solution(forms))
+                        .isInstanceOf(IllegalArgumentException.class)
+                        .hasMessage(String.format(
+                                UserValidator.INVALID_COUNT_RANGE_MESSAGE_FORMAT,
+                                UserValidator.MIN_RANGE,
+                                UserValidator.MAX_RANGE)
+                        );
+            }
 
-            assertThatThrownBy(() -> Problem6.solution(forms))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage(UserValidator.INVALID_EMAIL_FORMAT_MESSAGE);
-        }
+            @Test
+            @DisplayName("검증할 크루가 10,000명을 초과하는 경우 예외 발생")
+            void case2() {
+                List<List<String>> forms = new ArrayList<>();
+                for (int i = 0; i < 10_001; i++) {
+                    forms.add(Arrays.asList("human@email.com", "휴먼"));
+                }
 
-        @DisplayName("유효한 이메일 도메인이 아닌 경우 예외 발생")
-        @ParameterizedTest(name = "{displayName} {index} - {0}")
-        @MethodSource("onboarding.ApplicationTest#invalidEmailDomain")
-        void case6_5(String email, String name) {
-            List<List<String>> forms = List.of(
-                    List.of(email, name)
-            );
+                assertThatThrownBy(() -> Problem6.solution(forms))
+                        .isInstanceOf(IllegalArgumentException.class)
+                        .hasMessage(String.format(
+                                UserValidator.INVALID_COUNT_RANGE_MESSAGE_FORMAT,
+                                UserValidator.MIN_RANGE,
+                                UserValidator.MAX_RANGE)
+                        );
+            }
 
-            assertThatThrownBy(() -> Problem6.solution(forms))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage(String.format(
-                            UserValidator.INVALID_EMAIL_DOMAIN_MESSAGE_FORMAT,
-                            UserValidator.VALID_EMAIL_DOMAIN)
-                    );
-        }
+            @DisplayName("이메일 형식에 부합하지 않는 경우 예외 발생")
+            @ParameterizedTest(name = "{displayName} {index} - {0}")
+            @MethodSource("onboarding.ApplicationTest#invalidEmailFormat")
+            void case3(String email, String name) {
+                List<List<String>> forms = List.of(
+                        List.of(email, name)
+                );
 
-        @Test
-        @DisplayName("이메일 길이가 11자 미만일 경우 예외 발생")
-        void case7() {
-            List<List<String>> forms = List.of(
-                    List.of("@email.com", "간장게장")
-            );
+                assertThatThrownBy(() -> Problem6.solution(forms))
+                        .isInstanceOf(IllegalArgumentException.class)
+                        .hasMessage(UserValidator.INVALID_EMAIL_FORMAT_MESSAGE);
+            }
 
-            assertThatThrownBy(() -> Problem6.solution(forms))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage(String.format(
-                            "이메일 길이는 %d자 이상 %d자 미만이어야 합니다.",
-                            UserValidator.MIN_EMAIL_LENGTH,
-                            UserValidator.MAX_EMAIL_LENGTH)
-                    );
-        }
+            @DisplayName("유효한 이메일 도메인이 아닌 경우 예외 발생")
+            @ParameterizedTest(name = "{displayName} {index} - {0}")
+            @MethodSource("onboarding.ApplicationTest#invalidEmailDomain")
+            void case4(String email, String name) {
+                List<List<String>> forms = List.of(
+                        List.of(email, name)
+                );
 
-        @Test
-        @DisplayName("이메일 길이가 20자 이상일 경우 예외 발생")
-        void case8() {
-            List<List<String>> forms = List.of(
-                    List.of("somedayoverthemountain@email.com", "간장게장")
-            );
+                assertThatThrownBy(() -> Problem6.solution(forms))
+                        .isInstanceOf(IllegalArgumentException.class)
+                        .hasMessage(String.format(
+                                UserValidator.INVALID_EMAIL_DOMAIN_MESSAGE_FORMAT,
+                                UserValidator.VALID_EMAIL_DOMAIN)
+                        );
+            }
 
-            assertThatThrownBy(() -> Problem6.solution(forms))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage(String.format(
-                            "이메일 길이는 %d자 이상 %d자 미만이어야 합니다.",
-                            UserValidator.MIN_EMAIL_LENGTH,
-                            UserValidator.MAX_EMAIL_LENGTH)
-                    );
-        }
+            @Test
+            @DisplayName("이메일 길이가 11자 미만일 경우 예외 발생")
+            void case5() {
+                List<List<String>> forms = List.of(
+                        List.of("@email.com", "간장게장")
+                );
 
-        @Test
-        @DisplayName("닉네임 길이가 1자 미만일 경우 예외 발생")
-        void case9() {
-            List<List<String>> forms = List.of(
-                    List.of("valid@email.com", "")
-            );
+                assertThatThrownBy(() -> Problem6.solution(forms))
+                        .isInstanceOf(IllegalArgumentException.class)
+                        .hasMessage(String.format(
+                                "이메일 길이는 %d자 이상 %d자 미만이어야 합니다.",
+                                UserValidator.MIN_EMAIL_LENGTH,
+                                UserValidator.MAX_EMAIL_LENGTH)
+                        );
+            }
 
-            assertThatThrownBy(() -> Problem6.solution(forms))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage(String.format(
-                            UserValidator.INVALID_NAME_LENGTH_MESSAGE_FORMAT,
-                            UserValidator.MIN_NAME_LENGTH,
-                            UserValidator.MAX_NAME_LENGTH)
-                    );
-        }
+            @Test
+            @DisplayName("이메일 길이가 20자 이상일 경우 예외 발생")
+            void case6() {
+                List<List<String>> forms = List.of(
+                        List.of("somedayoverthemountain@email.com", "간장게장")
+                );
 
-        @Test
-        @DisplayName("닉네임 길이가 20자 이상일 경우 예외 발생")
-        void case10() {
-            List<List<String>> forms = List.of(
-                    List.of("valid@email.com", "작명규칙을아득히넘는청개구리의나쁜닉네임")
-            );
+                assertThatThrownBy(() -> Problem6.solution(forms))
+                        .isInstanceOf(IllegalArgumentException.class)
+                        .hasMessage(String.format(
+                                "이메일 길이는 %d자 이상 %d자 미만이어야 합니다.",
+                                UserValidator.MIN_EMAIL_LENGTH,
+                                UserValidator.MAX_EMAIL_LENGTH)
+                        );
+            }
 
-            assertThatThrownBy(() -> Problem6.solution(forms))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage(String.format(
-                            UserValidator.INVALID_NAME_LENGTH_MESSAGE_FORMAT,
-                            UserValidator.MIN_NAME_LENGTH,
-                            UserValidator.MAX_NAME_LENGTH)
-                    );
-        }
+            @Test
+            @DisplayName("닉네임 길이가 1자 미만일 경우 예외 발생")
+            void case7() {
+                List<List<String>> forms = List.of(
+                        List.of("valid@email.com", "")
+                );
 
-        @Test
-        @DisplayName("닉네임에 한글이 아닌 글자가 포함되어 있으면 예외 발생")
-        void case11() {
-            List<List<String>> forms = List.of(
-                    List.of("valid@email.com", "한글NotHangeul")
-            );
+                assertThatThrownBy(() -> Problem6.solution(forms))
+                        .isInstanceOf(IllegalArgumentException.class)
+                        .hasMessage(String.format(
+                                UserValidator.INVALID_NAME_LENGTH_MESSAGE_FORMAT,
+                                UserValidator.MIN_NAME_LENGTH,
+                                UserValidator.MAX_NAME_LENGTH)
+                        );
+            }
 
-            assertThatThrownBy(() -> Problem6.solution(forms))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage(UserValidator.EMAIL_NOT_KOREAN_MESSAGE);
+            @Test
+            @DisplayName("닉네임 길이가 20자 이상일 경우 예외 발생")
+            void case8() {
+                List<List<String>> forms = List.of(
+                        List.of("valid@email.com", "작명규칙을아득히넘는청개구리의나쁜닉네임")
+                );
+
+                assertThatThrownBy(() -> Problem6.solution(forms))
+                        .isInstanceOf(IllegalArgumentException.class)
+                        .hasMessage(String.format(
+                                UserValidator.INVALID_NAME_LENGTH_MESSAGE_FORMAT,
+                                UserValidator.MIN_NAME_LENGTH,
+                                UserValidator.MAX_NAME_LENGTH)
+                        );
+            }
+
+            @Test
+            @DisplayName("닉네임에 한글이 아닌 글자가 포함되어 있으면 예외 발생")
+            void case9() {
+                List<List<String>> forms = List.of(
+                        List.of("valid@email.com", "한글NotHangeul")
+                );
+
+                assertThatThrownBy(() -> Problem6.solution(forms))
+                        .isInstanceOf(IllegalArgumentException.class)
+                        .hasMessage(UserValidator.EMAIL_NOT_KOREAN_MESSAGE);
+            }
         }
     }
 
